--- a/src/app/components/radial-chart/radial-chart.html
+++ b/src/app/components/radial-chart/radial-chart.html
@@ -1,4 +1,7 @@
 <div class="chart-container"
-     style="position: relative; height:25vh">
-  <canvas #doughnutCanvas></canvas>
+     style="position: relative; height: 100%">
+  <canvas aria-label="Doughnut Chart"
+          id="doughnutChartCanvas"
+          role="img"
+          #doughnutCanvas></canvas>
 </div>
