--- a/src/app/components/pie-chart/pie-chart.html
+++ b/src/app/components/pie-chart/pie-chart.html
@@ -1,1 +1,7 @@
-<canvas #pieCanvas></canvas>
+<div class="chart-container"
+     style="position: relative; min-height:25vh">
+  <canvas aria-label="Pie Chart"
+          id="pieChartCanvas"
+          role="img"
+          #pieCanvas></canvas>
+</div>
