--- a/src/global.scss
+++ b/src/global.scss
@@ -30,6 +30,21 @@
   font-weight: 300;
   src: local("Material Icons"), local("MaterialIcons-Regular"), url("assets/fonts/MaterialIcons-Regular.ttf") format("ttf");
 }
+body {
+  // small
+@media screen and (min-width: 576px) {
+  font-size: 16px;
+}
+
+// large
+@media screen and (min-width: 992px) {
+  font-size: 18px;
+}
+
+@media screen and (min-width: 1200px) {
+  font-size: 20px;
+}
+}
 
 .text-xlarge {
   font-size: 1.75rem;
